update testing plugins and fix testing for jdk 17+